--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,15 @@
         .delete-button:hover {
             color: #c9302c;
         }
+
+        /* Abweichung Farbcode */
+        .positive-deviation {
+            background-color: rgba(76, 175, 80, 0.3);
+        }
+
+        .negative-deviation {
+            background-color: rgba(255, 87, 34, 0.3);
+        }
     </style>
 </head>
 <body>
@@ -129,12 +138,15 @@
             <thead>
                 <tr>
                     <th>Datum</th>
+                    <th>Zeit seit letzter Messung</th>
+                    <th>Tage seit letzter Messung</th>
                     <th>Zählerstand</th>
                     <th>Verbrauch</th>
+                    <th>Verbrauch seit letzter Messung</th>
                     <th>Prognose</th>
                     <th>Prognose-Verbrauch</th>
                     <th>Abweichung %</th>
-                    <th>Prognostizierter Verbrauch pro Tag</th> <!-- Neue Spalte -->
+                    <th>Ø tägl. Verbrauch seit letzter Messung</th> <!-- Neue Spalte -->
                     <th>Aktionen</th>
                 </tr>
             </thead>
@@ -146,17 +158,12 @@
 
     <script>
         const startValues = { 2024: 2795.650 };
-        const monthlyDailyGrowth = [6.209, 5.585, 4.657, 3.208, 1.552, 0.802, 0.776, 0.776, 2.005, 3.104, 4.812, 6.209];
 
         function setCurrentDateTime() {
             const now = new Date();
             const localISOString = new Date(now.getTime() - (now.getTimezoneOffset() * 60000)).toISOString();
             const dateStr = localISOString.slice(0, 16);
             document.getElementById('timestamp').value = dateStr;
-        }
-
-        function getDailyForecastGrowth(month) {
-            return monthlyDailyGrowth[month];
         }
 
         document.getElementById('gasForm').addEventListener('submit', function(e) {
@@ -189,53 +196,137 @@
             }
         }
 
+        function calculateForecast(timestamp) {
+            const monthlyGrowth = [
+                192.4758595, 156.3866359, 144.3568947, 96.23792977,
+                48.11896489, 24.05948244, 24.05948244, 24.05948244,
+                60.14870611, 96.23792977, 144.3568947, 192.4758595
+            ];
+            const date = new Date(timestamp);
+            const year = date.getFullYear();
+            const month = date.getMonth();
+            const dayOfMonth = date.getDate();
+            const hours = date.getHours();
+            let total = startValues[year] || startValues[2024];
+
+            for (let m = 0; m < month; m++) {
+                const daysInMonth = new Date(year, m + 1, 0).getDate();
+                total += (monthlyGrowth[m] / daysInMonth) * daysInMonth;
+            }
+
+            const daysInCurrentMonth = new Date(year, month + 1, 0).getDate();
+            const dailyRate = monthlyGrowth[month] / daysInCurrentMonth;
+
+            total += dailyRate * (dayOfMonth - 1);
+            total += dailyRate * (hours / 24);
+
+            return total.toFixed(3);
+        }
+
+        function calculateConsumption(meterReading, year) {
+            const baseValue = startValues[year] || startValues[2024];
+            return (meterReading - baseValue).toFixed(3);
+        }
+
+        function calculateForecastConsumption(forecastValue, year) {
+            const baseValue = startValues[year] || startValues[2024];
+            return (forecastValue - baseValue).toFixed(3);
+        }
+
+        function calculateDeviation(consumption, forecastConsumption) {
+            if (forecastConsumption === 0) return "N/A";
+            const deviation = (consumption / forecastConsumption) - 1;
+            return (deviation >= 0 ? "+" : "") + (deviation * 100).toFixed(2) + "%";
+        }
+
+        function applyDeviationColor(cell, deviation) {
+            const absoluteDeviation = Math.abs(deviation);
+            const intensity = Math.min(absoluteDeviation / 100, 1);
+            cell.style.backgroundColor = deviation > 0 ? `rgba(255, 99, 71, ${intensity})` : `rgba(144, 238, 144, ${intensity})`;
+        }
+
         function loadDataAndDisplayTable() {
             fetch('/get-readings')
                 .then(response => response.json())
                 .then(data => {
+                    const lastEntries = data.slice(-10);
                     const tableBody = document.querySelector('#readingsTable tbody');
                     tableBody.innerHTML = '';
 
-                    data.forEach((entry) => {
+                    lastEntries.forEach((entry, index) => {
                         const row = document.createElement('tr');
                         const dateCell = document.createElement('td');
+                        const timeSinceLastReadingCell = document.createElement('td'); // Neue Zelle
+                        const daysSinceLastReadingCell = document.createElement('td'); // Neue Zelle für Tage
                         const readingCell = document.createElement('td');
                         const consumptionCell = document.createElement('td');
+                        const consumptionSinceLastReadingCell = document.createElement('td'); // Neue Zelle für Verbrauch seit letzter Messung
                         const forecastCell = document.createElement('td');
                         const forecastConsumptionCell = document.createElement('td');
                         const deviationCell = document.createElement('td');
-                        const dailyForecastCell = document.createElement('td'); // Neue Zelle für täglichen Zuwachs
+                        const averageDailyConsumptionCell = document.createElement('td'); // Neue Zelle für durchschnittlichen täglichen Verbrauch
                         const actionCell = document.createElement('td');
                         const deleteButton = document.createElement('button');
 
                         const date = new Date(entry.timestamp);
-                        const month = date.getMonth();
+                        const formattedDate = `${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${String(date.getFullYear()).slice(-2)}, ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
+                        const year = date.getFullYear();
 
-                        // Datum formatieren
-                        const formattedDate = `${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${date.getFullYear()}`;
+                        const forecastValue = parseFloat(calculateForecast(entry.timestamp));
+                        const consumptionValue = parseFloat(calculateConsumption(parseFloat(entry.reading), year));
+                        const forecastConsumptionValue = parseFloat(calculateForecastConsumption(forecastValue, year));
+                        const deviationValue = calculateDeviation(consumptionValue, forecastConsumptionValue);
+
                         dateCell.textContent = formattedDate;
-
                         readingCell.textContent = parseFloat(entry.reading).toFixed(3);
-                        consumptionCell.textContent = parseFloat(entry.consumption).toFixed(3);
-                        forecastCell.textContent = parseFloat(entry.forecast).toFixed(3);
-                        forecastConsumptionCell.textContent = parseFloat(entry.forecastConsumption).toFixed(3);
-                        deviationCell.textContent = entry.deviation;
+                        consumptionCell.textContent = consumptionValue.toFixed(3);
+                        forecastCell.textContent = forecastValue.toFixed(3);
+                        forecastConsumptionCell.textContent = forecastConsumptionValue.toFixed(3);
+                        deviationCell.textContent = deviationValue;
 
-                        // Berechnen und Anzeigen des prognostizierten täglichen Verbrauchs
-                        dailyForecastCell.textContent = getDailyForecastGrowth(month).toFixed(3);
+                        applyDeviationColor(deviationCell, parseFloat(deviationValue));
 
                         deleteButton.textContent = '✕';
                         deleteButton.className = 'delete-button';
                         deleteButton.onclick = () => deleteEntry(entry._id);
                         actionCell.appendChild(deleteButton);
 
+                        // Zeit seit letzter Messung berechnen
+                        if (index > 0) {
+                            const lastDate = new Date(lastEntries[index - 1].timestamp);
+                            const timeDiff = date - lastDate;
+                            const hours = Math.floor(timeDiff / (1000 * 60 * 60));
+                            timeSinceLastReadingCell.textContent = `${String(hours).padStart(2, '0')}`;
+
+                            // Tage seit letzter Messung berechnen
+                            const days = Math.floor(hours / 24);
+                            daysSinceLastReadingCell.textContent = days.toString();
+
+                            // Verbrauch seit letzter Messung berechnen
+                            const lastConsumption = parseFloat(calculateConsumption(parseFloat(lastEntries[index - 1].reading), year));
+                            const consumptionSinceLast = consumptionValue - lastConsumption;
+                            consumptionSinceLastReadingCell.textContent = consumptionSinceLast.toFixed(3);
+
+                            // Durchschnittlicher täglicher Verbrauch seit letzter Messung berechnen
+                            const averageDailyConsumption = days > 0 ? consumptionSinceLast / days : 0;
+                            averageDailyConsumptionCell.textContent = averageDailyConsumption.toFixed(3);
+                        } else {
+                            timeSinceLastReadingCell.textContent = '---';
+                            daysSinceLastReadingCell.textContent = '---';
+                            consumptionSinceLastReadingCell.textContent = '---';
+                            averageDailyConsumptionCell.textContent = '---';
+                        }
+
                         row.appendChild(dateCell);
+                        row.appendChild(timeSinceLastReadingCell); // Neue Zelle hinzufügen
+                        row.appendChild(daysSinceLastReadingCell); // Neue Zelle für Tage hinzufügen
                         row.appendChild(readingCell);
                         row.appendChild(consumptionCell);
+                        row.appendChild(consumptionSinceLastReadingCell); // Neue Zelle für Verbrauch seit letzter Messung hinzufügen
                         row.appendChild(forecastCell);
                         row.appendChild(forecastConsumptionCell);
                         row.appendChild(deviationCell);
-                        row.appendChild(dailyForecastCell); // Neue Zelle hinzufügen
+                        row.appendChild(averageDailyConsumptionCell); // Neue Zelle für durchschnittlichen täglichen Verbrauch hinzufügen
                         row.appendChild(actionCell);
                         tableBody.appendChild(row);
                     });
